新增验证码功能

--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -11,9 +11,12 @@ spring.freemarker.content-type=text/html
 spring.freemarker.request-context-attribute=request
 spring.resources.static-locations=classpath:/static/
 spring.freemarker.cache=false
+spring.freemarker.settings.template_update_delay=0
+spring.freemarker.settings.default_encoding=UTF-8
+spring.freemarker.settings.classic_compatible=true
 #mybatis配置
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-mybatis.mapper-locations=classpath:/mappers/*.xml
+mybatis-plus.mapper-locations=classpath*:mappers/**/*.xml
 #连接池的配置信息
 ## 初始化大小，最小，最大
 spring.druid.initialSize=5
