--- a/src/main/resources/config/shirofilter.yml
+++ b/src/main/resources/config/shirofilter.yml
@@ -8,13 +8,13 @@
 #ssl:例子/admins/user/**=ssl没有参数，表示安全的url请求，协议为https
 #user:例如/admins/user/**=user没有参数表示必须存在用户，当登入操作时不做检查
 filter:
-   loginUrl: "/index"
+   loginUrl: "/login"
    filterlist[0]:
-    url: "/index"
+    url: "/login"
     auth: "anon"
    filterlist[1]:
     url: "/draft/**"
-    auth: "authc"
+    auth: "roles[1]"
    filterlist[2]:
     url: "/userLogin"
     auth: "anon"
@@ -24,3 +24,6 @@ filter:
    filterlist[4]:
     url: "/getCaptcha"
     auth: "anon"
+   filterlist[5]:
+    url: "/index"
+    auth: "authc"
