--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -38,3 +38,5 @@ spring.druid.maxPoolPreparedStatementPerConnectionSize=20
 spring.druid.filters=stat,wall,log4j
 # 通过connectProperties属性来打开mergeSql功能；慢SQL记录
 spring.druid.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+spring.servlet.multipart.max-file-size=-1
+spring.servlet.multipart.max-request-size=-1
